# term_planner

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  install.sh  tasks.json  uninstall.sh
.github/workflows/: aur-push.yml  auto-release.yml  ci-release.yml  create-github-release.yml  rust.yml
src/: colors.rs  data.rs  input.rs  io_utils.rs  lib.rs  main.rs  menus.rs  notify.rs  options.rs  resources.rs  task.rs
src/resources/: mod.rs  resource.rs  schedule.rs  task.rs  util.rs
systemd/: term_planner-notify.service  term_planner-notify.timer
