[package]
name = "term_planner"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/Mateus-Lacerda/term_planner"
rust-version = "1.86.0"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
libc = "0.2.172"
rustyline = "15.0.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
